--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Welcome to my Page!</h1>
-        <p class="lead"> I am a Senior Consultant working for Deloitte in the Analytics and Technology practice. My work involves consulting Tech Clients and their cross-functional teams to optimize ML applications for business problems. 
+        <p class="lead"> I am a Senior Consultant at Deloitte in the Analytics and Technology practice. My work involves consulting Tech Clients and their cross-functional teams to optimize ML applications for business problems. 
             <br><br>
-            In addition, I am a part-time student in the Data Science Masters program at UC Berkeley. My course work thus far includes Research Design & Analysis, Statistics, Data Engineering and Applied Machine Learning. Prior to my masters program, I earned by Bacherlors in Finance & Information Management Systems from the University of the Pacific. 
-
+            In addition, I am a part-time student in the Data Science Masters program at UC Berkeley. My coursework thus far includes Research Design & Analysis, Statistics, Data Engineering, and Applied Machine Learning. Before my master's program, I earned by Bachelor's in Finance & Information Management Systems from the University of the Pacific.
+            <br><br>
+            Perhaps my favorite project thus far was the comprehensive regression model I built to help predict apartments within the 5 boroughs of New York. Additionally, I am tremendously enjoying my applied machine learning course and applying deep learning artificial neural networks to help create models able to learn from complex datasets.
         </p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           
