--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <br><br>
             In addition, I am a part-time student in the Data Science Masters program at UC Berkeley. My coursework thus far includes Research Design & Analysis, Statistics, Data Engineering, and Applied Machine Learning. Before my master's program, I earned by Bachelor's in Finance & Information Management Systems from the University of the Pacific.
             <br><br>
-            Perhaps my favorite project thus far was the comprehensive regression model I built to help predict apartments within the 5 boroughs of New York. Additionally, I am tremendously enjoying my applied machine learning course and applying deep learning artificial neural networks to help create models able to learn from complex datasets.
+            Perhaps my favorite project thus far was the comprehensive regression model I built to help predict apartments within the 5 boroughs of New York. Additionally, I am tremendously enjoying my applied machine learning course and applying deep artificial neural networks to help create models able to learn from complex datasets.
         </p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           
